package com.design.observer;

/**
 * DisplayElement
 */
public interface DisplayElement {
    public void display();
}